--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
     "purescript-lists" : "4.0.1",
     "purescript-tuples" : "4.1.0",
     "purescript-bigints": "3.0.0",
-    "purescript-rationals": "3.1.1",
     "purescript-math": "2.1.0",
     "purescript-integers": "3.0.0",
+    "purescript-rationals" : "herrzinter/purescript-rationals#0f823b39028ab42b1be743ac33bfa695c7c3e9ad",
     "purescript-generics" : "4.0.0"
   },
   "devDependencies": {
