--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,8 @@
     "purescript-lists" : "4.0.1",
     "purescript-bigints": "3.0.0",
     "purescript-integers": "3.0.0",
-    "purescript-errors" : "3.0.0",
-    "purescript-tailrec" : "3.3.0",
-    "purescript-strings" : "3.3.0"
     "purescript-rationals" : "herrzinter/purescript-rationals#5e427812341c3cc2d1cb84639ed0d1f161dc55bf",
+    "purescript-tailrec" : "3.3.0"
     },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
