--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "purescript-integers": "3.0.0",
     "purescript-rationals" : "herrzinter/purescript-rationals#5e427812341c3cc2d1cb84639ed0d1f161dc55bf",
     "purescript-tailrec" : "3.3.0",
-    "purescript-test-unit" : "11.0.0"
+    "purescript-test-unit" : "11.0.0",
+    "purescript-errors" : "3.0.0"
     },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
