--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "purescript-prelude": "^3.0.0",
     "purescript-lists" : "4.0.1",
+    "purescript-strings": "3.3.0",
     "purescript-bigints": "3.0.0",
-    "purescript-integers": "3.0.0",
     "purescript-rationals" : "4.0.0",
     "purescript-tailrec" : "3.3.0",
     "purescript-errors" : "3.0.0"
